- Refactoring. - New format.

--- a/mfapplication/src/main/res/layout/activity_main.xml
+++ b/mfapplication/src/main/res/layout/activity_main.xml
@@ -7,10 +7,30 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.github.rtoshiro.mflibrary.MainActivity">
+    tools:context="com.github.rtoshiro.example.mflibrary.MainActivity">
 
-    <TextView
+    <EditText
+        android:id="@+id/edit_1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:text="" />
+
+    <EditText
+        android:id="@+id/edit_2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="" />
+
+    <EditText
+        android:id="@+id/edit_3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="" />
+
+    <EditText
+        android:id="@+id/edit_4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="" />
+
 </RelativeLayout>
