--- a/mfapplication/src/main/res/layout/activity_main.xml
+++ b/mfapplication/src/main/res/layout/activity_main.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -11,26 +12,37 @@
 
     <EditText
         android:id="@+id/edit_1"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:hint="(XX) XXXX-XXXX"
         android:text="" />
 
     <EditText
         android:id="@+id/edit_2"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:hint="XXXXX"
         android:text="" />
 
     <EditText
         android:id="@+id/edit_3"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:hint="XXXXX"
         android:text="" />
 
     <EditText
         android:id="@+id/edit_4"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:hint="XXXXX"
         android:text="" />
 
-</RelativeLayout>
+    <EditText
+        android:id="@+id/edit_5"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="XXXXX"
+        android:text="" />
+
+</LinearLayout>
