--- a/mfapplication/src/main/res/layout/activity_main.xml
+++ b/mfapplication/src/main/res/layout/activity_main.xml
@@ -21,14 +21,14 @@
         android:id="@+id/edit_2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="XXXXX"
+        android:hint="MM/DD/YYYY"
         android:text="" />
 
     <EditText
         android:id="@+id/edit_3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="XXXXX"
+        android:hint="MM/DD/YYYY"
         android:text="" />
 
     <EditText
